# BytesScreenShare

./: .gitignore  CMakeLists.txt
example/benchmark/: benchmark.py
example/p2p-client/: main.cpp
signaling-server/: CMakeLists.txt
signaling-server/src/: SignalingServer.cpp
src/Capture/: ScreenCaptureService.cpp  ScreenCaptureService.h
src/encoder/: RtcRtpSender.cpp  RtcRtpSender.h  VideoEncoder.cpp  VideoEncoder.h
src/render/: StreamReceiver.cpp  StreamReceiver.h  VideoOpenGLWidget.cpp  VideoOpenGLWidget.h
src/rtc/: PeerConnectionManager.cpp  PeerConnectionManager.hpp
src/ui/: shared_screen.cpp  shared_screen.h  shared_screen.ui
